# sbirs

./: CBD254-009.md  Fit_Criteria.md  HR0011SB20254-12.md  HR0011SB20254XL-01.md  content.md  pdf_to_markdown.py  pyproject.toml  summary.md
AIS/: ais_solicitation_main_points.md  ais_solicitation_raw.md  commercialization.md  content.md  cosmiac.md  final_scope.md  guidelines.md  ia.md  ia_references_raw.md  notes.md  orchestra_proposal_notes.md  overview.md  primary_concerns.md  ref_summaries.md  scope_ideas.md  specifications.md  todo.md
AIS/aurora/: 1_0_Description_of_Proposed_Technical_Effort.md  AIS_Outline.md  Definitions.md  final_scope.md
AIS/body_draft/: 1_0_Description_of_Proposed_Technical_Effort.md  AIS_Outline.md
AIS/canary/: final_scope.md
AIS/cosmiac/: cosmiac_pigeon.md  interest_to_subcontract_template.md
AIS/orchestra_example/: orchestra_proposal_notes.md  (+2 more)
EMSO/: cew.md  emso_p2.md  ewirdb.md  related_work.md  spectrum.md  summary.md
POLARIS/: p2_proposal.md  proposal.md
SPECTRUM/: tech_volume_raw.md
all/: HR0011SB20254-15.md  SF254-D1201.md  SF254-D1204.md  SF254-D1205.md  SF254-D1206.md  summary.md
generic/: generic_outline.md
instructions/: DAF_STTR_25D_R12_v4_09292025.md  solicitationDocuments.md
swap_radar_warning_solicitation/: solicitation_raw.md
tap_lab/: crimson_shock.md  description_prompt.md  description_prompt_ais_edge_ai.md  description_prompt_spectra.md  kill_chain.md  los_ais_edge_ai.md  los_spectra.md  los_template.md  polaris_los.md  polaris_los_request.md  problem_statements.md  victus_haze.md  welders_arc.md
(+11 files in other folders)
